--- a/MyTimesheet/M2RG.MyTimesheet.Domain/M2RG.MyTimesheet.Domain.csproj
+++ b/MyTimesheet/M2RG.MyTimesheet.Domain/M2RG.MyTimesheet.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\M2RG.MyTimesheet.Encryption\M2RG.MyTimesheet.Encryption.csproj" />
     <ProjectReference Include="..\M2RG.MyTimesheet.Flunt\M2RG.MyTimesheet.Flunt.csproj" />
   </ItemGroup>
 
