--- a/MyTimesheet/M2RG.MyTimesheet.Repositories/M2RG.MyTimesheet.Repositories.csproj
+++ b/MyTimesheet/M2RG.MyTimesheet.Repositories/M2RG.MyTimesheet.Repositories.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\M2RG.MyTimesheet.Domain\M2RG.MyTimesheet.Domain.csproj" />
+    <ProjectReference Include="..\M2RG.MyTimesheet.DTO\M2RG.MyTimesheet.DTO.csproj" />
   </ItemGroup>
 
 </Project>
